--- a/static/manifest.json
+++ b/static/manifest.json
@@ -13,8 +13,8 @@
       "type": "image/png"
     }
   ],
-  "name": "Webb Page",
-  "short_name": "Webb Page",
+  "name": "The Webb Page",
+  "short_name": "The Webb Page",
   "start_url": "/",
   "theme_color": "#333"
 }
