--- a/package.json
+++ b/package.json
@@ -17,21 +17,22 @@
   },
   "description": "Homepage for netop:// ウエハ",
   "devDependencies": {
-    "@babel/core": "^7.7.4",
+    "@babel/core": "^7.7.5",
     "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.4",
-    "@babel/preset-env": "^7.7.4",
-    "@babel/runtime": "^7.7.4",
+    "@babel/plugin-transform-runtime": "^7.7.6",
+    "@babel/preset-env": "^7.7.6",
+    "@babel/runtime": "^7.7.6",
     "@inc/eslint-config": "^2019.10.22",
     "@inc/stylelint-config": "^2019.12.1",
     "@inc/uchu": "^2019.12.1",
     "chronver": "^2019.10.2-7.1",
     "cypress": "^3.7.0",
+    "dedent": "^0.7.0",
     "eslint": "^6.7.2",
     "husky": "^3.1.0",
     "link-module-alias": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.27.8",
+    "rollup": "^1.27.9",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
@@ -46,7 +47,7 @@
     "stylelint-order": "^3.1.1",
     "svelte": "^3.16.0",
     "svelte-preprocess": "^3.2.6",
-    "updates": "^9.3.0"
+    "updates": "^9.3.2"
   },
   "engines": {
     "node": ">=12.0.0"
@@ -84,5 +85,5 @@
       "static"
     ]
   },
-  "version": "2019.12.08"
+  "version": "2019.12.08.1"
 }
