--- a/package.json
+++ b/package.json
@@ -17,35 +17,34 @@
   },
   "description": "Homepage for netop:// ウエハ",
   "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.7.4",
-    "@babel/plugin-transform-runtime": "^7.7.6",
-    "@babel/preset-env": "^7.7.7",
-    "@babel/runtime": "^7.7.7",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/runtime": "^7.8.3",
     "@inc/eslint-config": "^2019.10.22",
     "@inc/stylelint-config": "^2019.12.1",
     "@inc/uchu": "^2019.12.1",
     "chronver": "^2019.10.2-7.1",
-    "cypress": "^3.8.1",
     "dedent": "^0.7.0",
     "eslint": "^6.8.0",
-    "husky": "^3.1.0",
+    "husky": "^4.2.1",
     "link-module-alias": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.27.14",
+    "rollup": "^1.30.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^5.1.1",
-    "rollup-plugin-terser": "^5.1.3",
+    "rollup-plugin-terser": "^5.2.0",
     "sapper": "^0.27.9",
-    "sass": "^1.24.0",
+    "sass": "^1.25.1-test.1",
     "snazzy": "^8.0.0",
     "standardx": "^5.0.0",
-    "stylelint": "^12.0.1",
+    "stylelint": "^13.0.0",
     "stylelint-order": "^4.0.0",
-    "svelte": "^3.16.7",
+    "svelte": "^3.18.1",
     "svelte-preprocess": "^3.3.0",
     "updates": "^9.3.3"
   },
@@ -62,9 +61,6 @@
   "scripts": {
     "build": "sapper build --legacy",
     "compress": "sass --load-path=node_modules --update sass:static --style compressed",
-    "cy": "run-p --race dev cy:run",
-    "cy:run": "cypress run",
-    "cy:open": "cypress open",
     "export": "sapper export --legacy",
     "format": "eslint . --fix",
     "increment": "chronver --increment package",
@@ -85,5 +81,5 @@
       "static"
     ]
   },
-  "version": "2020.01.02.1"
+  "version": "2020.01.27"
 }
