--- a/package.json
+++ b/package.json
@@ -17,35 +17,35 @@
   },
   "description": "Homepage for netop:// ウエハ",
   "devDependencies": {
-    "@babel/core": "^7.8.3",
+    "@babel/core": "^7.8.6",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
-    "@babel/runtime": "^7.8.3",
+    "@babel/preset-env": "^7.8.6",
+    "@babel/runtime": "^7.8.4",
     "@inc/eslint-config": "^2019.10.22",
     "@inc/stylelint-config": "^2019.12.1",
     "@inc/uchu": "^2019.12.1",
-    "chronver": "^2019.10.2-7.1",
+    "chronver": "^2020.2.24",
     "dedent": "^0.7.0",
     "eslint": "^6.8.0",
-    "husky": "^4.2.1",
+    "husky": "^4.2.3",
     "link-module-alias": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^1.30.1",
+    "rollup": "^1.31.1",
     "rollup-plugin-babel": "^4.3.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-svelte": "^5.1.1",
     "rollup-plugin-terser": "^5.2.0",
-    "sapper": "^0.27.9",
-    "sass": "^1.25.1-test.1",
+    "sapper": "^0.27.10",
+    "sass": "^1.26.1",
     "snazzy": "^8.0.0",
     "standardx": "^5.0.0",
-    "stylelint": "^13.0.0",
+    "stylelint": "^13.2.0",
     "stylelint-order": "^4.0.0",
-    "svelte": "^3.18.1",
-    "svelte-preprocess": "^3.3.0",
+    "svelte": "^3.19.1",
+    "svelte-preprocess": "^3.4.0",
     "updates": "^9.3.3"
   },
   "engines": {
@@ -81,5 +81,5 @@
       "static"
     ]
   },
-  "version": "2020.01.27"
+  "version": "2020.02.27"
 }
