--- a/package.json
+++ b/package.json
@@ -5,51 +5,52 @@
     "~util": "src/utils"
   },
   "author": {
-    "email": "paul@webb.page",
-    "name": "Paul Anthony Webb"
+    "name": "netop://ウエハ",
+    "url": "https://webb.page"
   },
   "dependencies": {
     "compression": "^1.7.4",
-    "marked": "^0.8.0",
+    "marked": "^1.0.0",
     "natural-orderby": "^2.0.3",
     "polka": "next",
     "sirv": "^0.4.2"
   },
   "description": "Homepage for netop:// ウエハ",
   "devDependencies": {
-    "@babel/core": "^7.8.7",
+    "@babel/core": "^7.9.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.8.3",
-    "@babel/preset-env": "^7.8.7",
-    "@babel/runtime": "^7.8.7",
-    "@inc/eslint-config": "^2019.10.22",
-    "@inc/stylelint-config": "^2019.12.1",
+    "@babel/plugin-transform-runtime": "^7.9.0",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/runtime": "^7.9.2",
     "@inc/uchu": "^2019.12.1",
-    "chronver": "^2020.3.9",
+    "@webb/config-eslint": "^2020.4.16",
+    "@webb/config-stylelint": "^2020.4.16",
+    "chronver": "^2020.4.16",
     "dedent": "^0.7.0",
+    "del-cli": "^3.0.0",
     "eslint": "^6.8.0",
-    "husky": "^4.2.3",
+    "husky": "^4.2.5",
     "link-module-alias": "^1.2.0",
     "npm-run-all": "^4.1.5",
-    "rollup": "^2.0.3",
+    "rollup": "^2.7.2",
     "rollup-plugin-babel": "^4.4.0",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-svelte": "^5.1.1",
+    "rollup-plugin-svelte": "^5.2.1",
     "rollup-plugin-terser": "^5.3.0",
-    "sapper": "^0.27.10",
-    "sass": "^1.26.2",
+    "sapper": "^0.27.12",
+    "sass": "^1.26.5",
     "snazzy": "^8.0.0",
     "standardx": "^5.0.0",
-    "stylelint": "^13.2.1",
+    "stylelint": "^13.3.3",
     "stylelint-order": "^4.0.0",
-    "svelte": "^3.19.2",
-    "svelte-preprocess": "^3.4.0",
-    "updates": "^10.2.0"
+    "svelte": "^3.21.0",
+    "svelte-preprocess": "^3.7.4",
+    "updates": "^10.2.10"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=13.0.0"
   },
   "husky": {
     "hooks": {
@@ -66,11 +67,11 @@
     "increment": "chronver --increment package",
     "postinstall": "link-module-alias",
     "preinstall": "command -v link-module-alias;link-module-alias clean || true",
-    "start": "rm -rf __sapper__;npm i;npm run build;npm run compress;NODE_ENV=production PORT=6433 node __sapper__/build",
+    "start": "del './__sapper__';npm i;npm run build;npm run compress;NODE_ENV=production PORT=6433 node __sapper__/build",
     "test": "run-s test:*",
     "test:dependencies": "updates --update ./",
     "test:lint": "standardx --verbose | snazzy",
-    "test:sass": "stylelint '**/*.scss'",
+    "test:sass": "stylelint 'sass/*/**.scss'",
     "watch": "NODE_ENV=development PORT=6433 run-p watch:*",
     "watch:app": "sapper dev",
     "watch:sass": "sass --load-path=node_modules --watch sass:static --style compressed"
@@ -81,5 +82,5 @@
       "static"
     ]
   },
-  "version": "2020.03.10"
+  "version": "2020.04.26"
 }
