--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,2 @@
-; This is a dumb file
+engine-strict=true
 package-lock=false
-
-; Needed for `link-module-alias` to work serverside
-unsafe-perm=true
